WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259360
[GStreamer][WebCodecs] Propagate internal video decoder configuration error
https://bugs.webkit.org/show_bug.cgi?id=259360
Summary
[GStreamer][WebCodecs] Propagate internal video decoder configuration error
Philippe Normand
Reported
2023-07-20 08:29:47 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-07-20 08:33:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15947
EWS
Comment 2
2023-07-21 01:48:10 PDT
Committed
266203@main
(6881e7bb0cfe): <
https://commits.webkit.org/266203@main
> Reviewed commits have been landed. Closing PR #15947 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-21 01:49:16 PDT
<
rdar://problem/112648601
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug