[GStreamer][WebCodecs] Propagate internal video decoder configuration error https://bugs.webkit.org/show_bug.cgi?id=259360

Reviewed by Xabier Rodriguez-Calvar.

The harness input caps have to be explicitly set, per codec configuration. So if decoding is
requested for a format for which we do have a GStreamer element but that is not properly configuring
the element harness, then we should report this error to the upper layer. This was noticed when
checking the HEVC tests, for which we don't have support yet.

* Source/WebCore/platform/graphics/gstreamer/VideoDecoderGStreamer.cpp:
(WebCore::GStreamerInternalVideoDecoder::isStarted const):
(WebCore::GStreamerVideoDecoder::create):

Canonical link: https://commits.webkit.org/266203@main